fix overflow hidden problem with #new_section

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -229,6 +229,9 @@ a img {
   overflow: hidden;
 }
 
+#new_section form {
+  width: 230px;
+}
 
 #nav_sections {
   width: 900px;
